--- a/src/components/layout/menu/Menu.module.scss
+++ b/src/components/layout/menu/Menu.module.scss
@@ -10,3 +10,10 @@
   height: 10%;
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.linkList {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+}
