--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -1,13 +1,13 @@
-.btn{
+.btn {
   min-width: 100px;
   height: 40px;
   font-size: 18px;
   background-color: white;
-  color: #007bff;;
-  border: 1px solid #007bff;;
+  color: #007bff;
+  border: 1px solid #007bff;
   border-radius: 20px;
   transition: all 0.3s ease;
-  &:hover{
+  &:hover {
     background-color: #4dabf5;
     color: white;
   }
