--- a/src/components/UI/menuBtn/MenuBtn.module.scss
+++ b/src/components/UI/menuBtn/MenuBtn.module.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
   width: 100%;
   height: 10%;
   display: flex;
@@ -8,20 +8,19 @@
 }
 
 .burger {
-  width:40px;
-  height:20px;
-  border:none;
-  background:transparent;
-  position:relative;
-  cursor:pointer;
+  width: 40px;
+  height: 20px;
+  border: none;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
   transition: all 0.3s ease;
 
   &:focus {
-    outline:none;
+    outline: none;
   }
 
   &.burger2 {
-
     &:hover {
       transform: scale(1.05);
     }
@@ -29,75 +28,71 @@
     &:after,
     &:before,
     span {
-      width:100%;
-      height:4px;
-      border-radius:100px;
-      position:absolute;
-      display:block;
-      background-color:#ffffff;
+      width: 100%;
+      height: 4px;
+      border-radius: 100px;
+      position: absolute;
+      display: block;
+      background-color: #ffffff;
     }
 
     &:after,
     &:before {
-      content:"";
+      content: '';
       transition: 0.3s width 0.4s;
     }
 
     &:after {
-      top:0px;
-      left:0px;
-      margin-top:0px;
+      top: 0px;
+      left: 0px;
+      margin-top: 0px;
     }
 
     &:before {
-      bottom:0px;
-      right:0px;
-      margin-bottom:0px;
+      bottom: 0px;
+      right: 0px;
+      margin-bottom: 0px;
     }
 
     span {
-      top:50%;
-      margin-top:-2px;
-      transition: transform 0.3s ;
+      top: 50%;
+      margin-top: -2px;
+      transition: transform 0.3s;
 
-        &:before {
-          content:"";
-          background:#ffffff;
-          width:100%;
-          height:4px;
-          border-radius:100px;
-          position:absolute;
-          left:0px;
-          transition: transform 0.3s ;
-        }
-
+      &:before {
+        content: '';
+        background: #ffffff;
+        width: 100%;
+        height: 4px;
+        border-radius: 100px;
+        position: absolute;
+        left: 0px;
+        transition: transform 0.3s;
+      }
     }
 
     &.on {
-
       &:after {
         transition: all 0.2s;
-        width:0%;
-        left:0px;
+        width: 0%;
+        left: 0px;
       }
 
       &:before {
         transition: all 0.2s;
-        width:0%;
-        right:0px;
+        width: 0%;
+        right: 0px;
       }
 
       span {
-        transform:rotate(45deg);
-        transition: 0.3s transform 0.4s ;
+        transform: rotate(45deg);
+        transition: 0.3s transform 0.4s;
 
         &:before {
-          transform:rotate(-90deg);
-          transition: 0.3s transform 0.4s ;
+          transform: rotate(-90deg);
+          transition: 0.3s transform 0.4s;
         }
       }
-
     }
-
   }
 }
