--- a/src/components/layout/Modal/Modal.module.scss
+++ b/src/components/layout/Modal/Modal.module.scss
@@ -6,6 +6,9 @@
   z-index: 700;
   width: 400px;
   outline: 0;
+  background: white;
+  margin: auto;
+  border-radius: 8px;
 }
 .backdrop {
   position: fixed;
@@ -17,34 +20,24 @@
   z-index: 500;
 }
 
-.styled-modal{
-  z-index: 100;
-  background: white;
-  position: relative;
-  margin: auto;
-  border-radius: 8px;
-}
-.header {  
+.header {
   padding: 20px 20px 20px 20px;
   display: flex;
   justify-content: space-between;
 }
-.header-text {  
+.headerText {
   align-self: center;
   color: lightgray;
   font-size: 1.2rem;
 }
 
-.close-btn {
+.closeBtn {
   font-size: 1.2rem;
   border: none;
   background: none;
   cursor: pointer;
 }
 
-.content {  
+.content {
   padding: 0 20px 20px;
 }
-
-
-
