--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -3,8 +3,8 @@
   height: 40px;
   font-size: 18px;
   background-color: white;
-  color: #007bff;;
-  border: 1px solid #007bff;;
+  color: #007bff;
+  border: 1px solid #007bff;
   border-radius: 20px;
   transition: all 0.3s ease;
   &:hover{
