--- a/src/views/games/ChosenLavel/ChosenLevel.module.scss
+++ b/src/views/games/ChosenLavel/ChosenLevel.module.scss
@@ -1,9 +1,9 @@
 .root {
-  height: 100%;
+  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(227, 242, 253);
 }
 
 .innerWrapper {
