--- a/src/views/games/Games.module.scss
+++ b/src/views/games/Games.module.scss
@@ -1,6 +1,8 @@
 .container {
-  height: 90%;
+  height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  margin-left: 60px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
