--- a/src/components/UI/wordCard/WordCard.module.scss
+++ b/src/components/UI/wordCard/WordCard.module.scss
@@ -1,80 +1,121 @@
-.container{
+.container {
   width: 48%;
-  height: 160px;
+  height: 200px;
   margin: 10px 0;
   padding: 20px;
   border: 1px solid #007bff;
   border-radius: 20px;
   display: flex;
-  justify-content: space-between;
   font-size: 18px;
   color: #007bff;
   background-color: white;
   transition: all 0.3s ease;
 }
 
-.textContainer{
+.hardWord {
+  border-color: #ce0000;
+  background-color: rgba(243, 123, 123, 0.2);
+  img {
+    border-color: #ce0000;
+  }
+  p:nth-child(1) {
+    border-color: #ce0000;
+  }
+  button:not(:last-child) {
+    border-color: #ce0000;
+    background-color: rgba(243, 123, 123, 0.2);
+  }
+}
+
+.image {
+  width: 20%;
+  height: 100%;
+  border: 1px solid #007bff;
+  border-radius: 10px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.textContainer {
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-left: 20px;
 }
 
-.textItemContainer{
+.textItemContainer {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: black;
 
-  .mainWord{
+  .mainWord {
+    margin-bottom: 0;
     border-bottom: 1px solid #007bff;
   }
 
-  .longTextItem{
+  .longTextItem {
     font-size: 16px;
   }
 }
 
-.btnsContainer{
-  min-width: 160px;
-  height: 100%;
+.btnsContainer {
+  width: 40%;
   display: flex;
   justify-content: space-between;
 }
 
-.translateBtn{
-  border: 2px solid #4dabf5;
+.btnImage {
+  width: 40px;
+  height: 40px;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: all 0.3s ease;
-  &:hover{
+  background-color: white;
+  img {
+    width: 24px;
+  }
+
+  &:disabled {
+    border-color: lightgray;
+
+    &:hover {
+      background-color: white;
+    }
+  }
+}
+
+.translateBtn {
+  border: 2px solid #4dabf5;
+  &:hover {
     background-color: #4dabf5;
   }
 }
 
-.playBtn{
+.playBtn {
   border: 2px solid #4dabf5;
-  border-radius: 10px;
-  transition: all 0.3s ease;
-  &:hover{
+  &:hover {
     background-color: #4dabf5;
   }
 }
 
-.checkBtn{
+.checkBtn {
   border: 2px solid #43d400;
-  border-radius: 10px;
-  transition: all 0.3s ease;
-  &:hover{
+  &:hover {
     background-color: #43d400;
   }
 }
 
-.hardBtn{
+.hardBtn {
   border: 2px solid #f32b4c;
-  border-radius: 10px;
-  transition: all 0.3s ease;
-  &:hover{
+  &:hover {
     background-color: #f32b4c;
   }
 }
 
-p{
-  margin: 0;
+.paintHardBtn {
+  background-color: #f32b4c;
 }
