--- a/src/components/layout/textbookContent/TextbookContent.module.scss
+++ b/src/components/layout/textbookContent/TextbookContent.module.scss
@@ -1,12 +1,7 @@
-.container{
+.container {
+  min-height: 80%;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.wordsContainer{
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
 }
