--- a/src/components/UI/answers/Answers.module.scss
+++ b/src/components/UI/answers/Answers.module.scss
@@ -26,9 +26,28 @@
     transform: scale(1.1);
     transition: transform 0.5s;
   }
+  &:disabled {
+    color: gray;
+    border-color: gray;
+    &:hover {
+      background-color: white;
+      transform: scale(1);
+      transition: transform 0.5s;
+    }
+  }
   @media (max-width: 950px) {
     min-width: 100px;
     min-height: 40px;
+  }
+}
+
+.disabled {
+  color: gray;
+  border-color: gray;
+  &:hover {
+    background-color: white;
+    transform: scale(1);
+    transition: transform 0.5s;
   }
 }
 
