--- a/src/components/UI/results/Results.module.scss
+++ b/src/components/UI/results/Results.module.scss
@@ -14,15 +14,11 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  -webkit-tap-highlight-color: transparent;
-  opacity: 1;
-  transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 .wrapperResult {
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 1;
   transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   max-height: calc(100% - 64px);
   max-width: 600px;
@@ -34,44 +30,89 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   flex: 1 1 auto;
   overflow-y: auto;
   background: #fff;
-  width: 400px;
+  width: 600px;
+}
+
+.title {
+  border-radius: 30px 30px 0 0;
+  height: 90px;
+}
+
+.titelList{
+  margin-top: 20px;
+}
+
+.listResult {
+  max-height: 70vh;
 }
 
 .columnResults {
-  height: 300px;
+  width: 500px;
   overflow: auto;
   padding-left: 15px;
 }
 
 .countRightAnswers {
-  //   color: #fff;
+  color: #fff;
   border-radius: 16px;
   padding: 2px 15px;
+  background: #028500;
+}
+
+.countWrongAnswers {
+  color: #fff;
+  border-radius: 16px;
+  padding: 2px 15px;
+  background: #ff0000;
 }
 
 .backSection {
+  width: 100%;
+  height: 80px;
   flex: 0 0 auto;
   display: flex;
   padding: 8px;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   background: #fff;
+  border-radius: 0 0 30px 30px;
+  & button {
+    margin: 5px 20px;
+    width: 150px;
+  }
 }
 
-.backButton {
-  margin: 5px 20px;
-  background: #37516a;
-  color: #fff;
-  transform: scale(1);
-  transition: all 0.5s;
-  &:hover {
-    background: #37516a;
-    transform: scale(1.1);
-    transition: transform 0.5s;
-  }
+.answerLine {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.volumeRight {
+  filter: invert(30%) sepia(87%) saturate(4644%) hue-rotate(106deg) brightness(92%) contrast(102%);
+}
+
+.volumeWrong {
+  filter: invert(20%) sepia(87%) saturate(7404%) hue-rotate(358deg) brightness(105%) contrast(117%);
+}
+
+.columnResults::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f9f9fd;
+}
+
+.columnResults::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #007bff;
+}
+
+.columnResults::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  background-color: #f9f9fd;
+  margin: 15px 0;
 }
