--- a/src/views/games/Games.module.scss
+++ b/src/views/games/Games.module.scss
@@ -1,5 +1,9 @@
 .container {
-  height: 100vh;
+  height: 90%;
+}
+
+.GameCardsContainer {
+  height: 100%;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
