--- a/src/components/UI/results/Results.module.scss
+++ b/src/components/UI/results/Results.module.scss
@@ -42,7 +42,7 @@
   height: 90px;
 }
 
-.titelList{
+.titelList {
   margin-top: 20px;
 }
 
@@ -111,7 +111,7 @@
 }
 
 .columnResults::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   background-color: #f9f9fd;
   margin: 15px 0;
