--- a/src/views/stats/Stats.module.scss
+++ b/src/views/stats/Stats.module.scss
@@ -2,5 +2,11 @@
   height: 90%;
   display: flex;
   flex-direction: column;
-  margin-left: 60px;
+  justify-content: space-around;
+  margin: 50px 100px;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
 }
