--- a/src/components/layout/statsToday/StatsToday.module.scss
+++ b/src/components/layout/statsToday/StatsToday.module.scss
@@ -1,3 +1,6 @@
 .statsTodayWrapper {
-    margin-top: 30px;
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
