--- a/src/components/UI/sprintBonus/SprintBonus.module.scss
+++ b/src/components/UI/sprintBonus/SprintBonus.module.scss
@@ -1,28 +1,29 @@
 .container {
+  height: 100px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: center;
 }
 
+.bonus {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 20px;
+
+  &__item {
+    width: 40px;
+    height: 40px;
+    background-image: url(../../../assets//images/star.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+}
 .bonus__value {
-  font-size: 16px;
-  line-height: 19px;
-  text-transform: uppercase;
+  font-size: 32px;
+  line-height: 39px;
+  font-weight: 700;
   color: #1c658c;
-}
-
-.bonus__item {
-  width: 30px;
-  height: 30px;
-
-  &_1 {
-    background: #9fc3d8;
-  }
-
-  &_2 {
-    background: #398ab9;
-  }
-
-  &_3 {
-    background: #1c658c;
-  }
 }
