--- a/src/components/layout/sprintContent/SprintContent.module.scss
+++ b/src/components/layout/sprintContent/SprintContent.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: 450px;
   height: 500px;
-  background: #d8d2cb;
+  background: rgba(216, 210, 203, 0.6);
   border-radius: 20px;
   padding: 30px;
   display: flex;
