--- a/src/components/UI/wordCard/WordCard.module.scss
+++ b/src/components/UI/wordCard/WordCard.module.scss
@@ -90,7 +90,8 @@
     border-color: lightgray;
 
     &:hover {
-      background-color: white;
+      background-color: lightgray;
+      cursor: not-allowed;
     }
   }
 }
