--- a/src/components/layout/homeContent/HomeContent.module.scss
+++ b/src/components/layout/homeContent/HomeContent.module.scss
@@ -1,20 +1,28 @@
 .container {
   display: flex;
-  background-color: white;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
-  height: 90%;
+  height: 100%;
+  padding: 40px;
+  background-color: white;
+}
+
+.topInfoContainer{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .mem {
-  width: 600px;
+  width: 50%;
   border: 2px solid #007bff;
   border-radius: 40px;
 }
 
 .infoContainer {
-  width: 400px;
+  width: 37%;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
 }
