--- a/src/components/layout/teamContent/TeamContent.module.scss
+++ b/src/components/layout/teamContent/TeamContent.module.scss
@@ -4,38 +4,40 @@
   justify-content: space-between;
 }
 
-.img {
-  width: 40%;
-  height: 100%;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-}
-
 .team {
   display: flex;
+  align-items: center;
   justify-content: space-around;
-  flex-direction: column;
-  width: 50%;
-
+  height: 100%;
+  width: 100%;
   &__item {
-    height: calc(90% / 3);
-    width: 80%;
+    height: 80%;
+    width: 300px;
+    padding: 40px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     border-radius: 20px;
     background-color: #e3f2fd;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
     .content {
-      width: calc(100% - 230px);
+      width: 100%;
+      height: calc(100% - 280px);
       .name {
         font-size: 1.4rem;
         font-weight: 700;
+        .github {
+          margin-left: 5px;
+          display: inline-block;
+          width: 25px;
+          height: 25px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          }
+        }
       }
       .role {
         font-size: 1.2rem;
@@ -48,18 +50,12 @@
       }
     }
     .img {
-      width: 200px;
-      height: 100%;
-      &__link {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-      }
+      width: 250px;
+      height: 250px;
       &__img {
         border-radius: 20px;
-        width: 90%;
-        height: 90%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
         box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
       }
