--- a/src/components/UI/gameCard/gameCard.module.scss
+++ b/src/components/UI/gameCard/gameCard.module.scss
@@ -20,7 +20,9 @@
     flex-direction: column;
     margin: 20px 20px;
     border-radius: 30px;
-    border: 1px solid #007bff;
+    //border: 1px solid #007bff;
+    background-color: #e3f2fd;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   }
   &.descriptionWrapper {
     margin-left: 16px;
