--- a/src/components/UI/groupButton/GroupButton.module.scss
+++ b/src/components/UI/groupButton/GroupButton.module.scss
@@ -8,6 +8,7 @@
 .groupButton {
   width: 50px;
   height: 50px;
+  background-color: white;
   border: 1px solid #007bff;
   border-radius: 50%;
   outline: none;
