--- a/src/components/UI/wordCard/WordCard.module.scss
+++ b/src/components/UI/wordCard/WordCard.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: 48%;
+  min-width: 550px;
   height: 200px;
-  margin: 10px 0;
   padding: 20px;
   border: 1px solid #007bff;
   border-radius: 20px;
@@ -61,9 +61,10 @@
 }
 
 .btnsContainer {
-  width: 40%;
+  width: 45%;
   display: flex;
-  justify-content: space-between;
+  column-gap: 5px;
+  justify-content: center;
 }
 
 .btnImage {
