--- a/src/components/layout/pagination/Pagination.module.scss
+++ b/src/components/layout/pagination/Pagination.module.scss
@@ -1,3 +1,9 @@
 .container {
+  //width: calc(100% - 75px);
   padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 10px;
 }
