--- a/src/components/layout/teamContent/TeamContent.module.scss
+++ b/src/components/layout/teamContent/TeamContent.module.scss
@@ -1,4 +1,5 @@
 .container {
+  padding: 30px 0;
   height: calc(100vh - 75px);
   display: flex;
   justify-content: space-between;
@@ -8,12 +9,16 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  column-gap: 30px;
+  row-gap: 30px;
+  flex-wrap: wrap;
   height: 100%;
   width: 100%;
+  padding: 0 40px;
   &__item {
     height: 80%;
     width: 300px;
-    padding: 40px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +28,7 @@
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
     .content {
       width: 100%;
-      height: calc(100% - 280px);
+      height: calc(100% - 260px);
       .name {
         font-size: 1.4rem;
         font-weight: 700;
