--- a/src/views/games/choosenLevel/ChoosenLevel.module.scss
+++ b/src/views/games/choosenLevel/ChoosenLevel.module.scss
@@ -37,6 +37,8 @@
   justify-content: space-between;
   width: 100%;
   padding: 16px;
+  background-color: #e3f2fd;
+  //box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   margin-bottom: 32px;
