refactor: add small improves

--- a/src/components/UI/hardUnitMenuItem/HardUnitMenuItem.module.scss
+++ b/src/components/UI/hardUnitMenuItem/HardUnitMenuItem.module.scss
@@ -13,6 +13,7 @@
   &:disabled {
     color: lightgray;
     border-color: lightgray;
+    cursor: not-allowed;
     &:hover {
       background-color: white;
       color: lightgray;
