--- a/src/components/UI/gameLink/GameLink.module.scss
+++ b/src/components/UI/gameLink/GameLink.module.scss
@@ -6,7 +6,8 @@
   font-size: 24px;
   color: #00af2c;
   transition: all 0.3s ease;
-  &:hover {
+  &:hover,
+  &:active {
     background-color: #45b160;
     color: white;
   }
