--- a/src/views/textbook/Textbook.module.scss
+++ b/src/views/textbook/Textbook.module.scss
@@ -4,3 +4,10 @@
   flex-direction: column;
   margin-left: 75px;
 }
+
+.hardContainer {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 75px;
+}
